@@ -16,6 +16,7 @@
 - when assigning scene, texture, audio file or model the file hierarchy list now also shows file extension
 
 0.1.3.0003:
+- added collapsible headers to inspector
 - no longer forced to have CMake, Ninja and Visual Studio installed to open the engine
 - a warning popup is created if user tries to compile or clean rebuild game if CMake, Ninja and Visual Studio are not installed and added to USER/SYSTEM path on windows
 - a warning popup is created if user tries to run game which has not been created properly yet, removed the console error message for it
